# MyRespondrPublishDocuments

./: .git-blame-ignore-revs  .gitignore  README.md  package-lock.json  package.json
.github/: format.yml
.github/workflows/: backend-tests.yml  format.yml
backend/: app.py  pyproject.toml  upload_routes.py
backend/database/: __init__.py
backend/database/supabase_helper/: __init__.py  supabase_functions.py
backend/myrespondr_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/services/: __init__.py
backend/services/core/: __init__.py  auth_service.py
frontend/: OrganizationDocumentUploader.tsx  env-config.js  index.html  package-lock.json  package.json
scripts/: generate_frontend_env.mjs  login_and_print_org.mjs
server/: index.mjs
setup/: create_document_manager_table.sql  create_organization_documents_table.sql
